// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App component renders with definition 1`] = `
<div
  className="app breadcrumbs_visible"
>
  <Nav />
  <Breadcrumbs
    definition={
      Object {
        "brand": Object {
          "brand": "generic",
        },
        "metadata": Object {
          "displayCategory": "wellPlate",
        },
      }
    }
  />
  <Page
    content={
      <LabwareDetails
        definition={
          Object {
            "brand": Object {
              "brand": "generic",
            },
            "metadata": Object {
              "displayCategory": "wellPlate",
            },
          }
        }
      />
    }
    sidebar={
      <Sidebar
        filters={
          Object {
            "category": "wellPlate",
            "manufacturer": "generic",
          }
        }
        isLabwareDetail={true}
      />
    }
    sidebarLargeOnly={true}
    sidebarXlOnly={true}
  />
</div>
`;

exports[`App component renders without definition 1`] = `
<div
  className="app"
>
  <Nav />
  <Page
    content={
      <LabwareList
        filters={
          Object {
            "category": "all",
            "manufacturer": "all",
          }
        }
      />
    }
    sidebar={
      <Sidebar
        filters={
          Object {
            "category": "all",
            "manufacturer": "all",
          }
        }
        isLabwareDetail={false}
      />
    }
    sidebarLargeOnly={false}
    sidebarXlOnly={false}
  />
</div>
`;
